[project]
name = "minecraft-transit-railway-calculation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter-Ho-Netflix",email = "diannaobingdukb@aliyun.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.1,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false